fixed overflow-x

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,11 +2,23 @@
   margin: 0;
   padding: 0;
   box-shadow: border-box;
-  overflow: visible;
 }
 
 body {
   background-color: #fff;
+  margin: 0;
+  height: auto;
+  overflow-x: hidden;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  /* background-color: #0f3460; */
+}
+
+#body {
+  overflow-x: hidden;
 }
 
 :root {
@@ -43,17 +55,6 @@ a:hover {
   /* box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px; */
   box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px,
     rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
-}
-
-body {
-  margin: 0;
-  overflow-x: hidden;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  /* background-color: #0f3460; */
 }
 
 code {
